# homm5-scaner

./: Cargo.toml
src/: lib.rs
src/entity/: art.rs  creature.rs  hero.rs  mod.rs  spell.rs
src/output/: mod.rs
src/pak/: mod.rs
